--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
   "directories": {
     "example": "example"
   },
-  "dependencies": {
-    "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.8.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "css-loader": "^3.2.0",
     "file-loader": "^4.2.0",
@@ -18,13 +15,15 @@
     "mini-css-extract-plugin": "^0.8.0",
     "sass": "^1.22.10",
     "sass-loader": "^7.2.0",
-    "webpack": "^4.39.2"
+    "webpack": "^4.39.2",
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.8.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production --output-path .",
     "dev": "webpack-dev-server --mode development --open",
-    "test-build": "webpack",
+    "build-dev": "webpack",
     "clean": "rm -rf example/*",
     "clean-all": "rm -rf example node_modules"
   },
