--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production --output-path .",
-    "dev": "webpack-dev-server --mode development --open",
+    "dev": "webpack-dev-server --mode development --port 8080 --open",
     "build-dev": "webpack",
     "clean": "rm -rf example/*",
     "clean-all": "rm -rf example node_modules"
