--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {},
   "devDependencies": {
     "css-loader": "^3.2.0",
+    "favicons-webpack-plugin": "^1.0.1",
     "file-loader": "^4.2.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
