Added info about modified license

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "keywords": [],
   "author": "Benjamin 'Benno' Falkner",
-  "license": "MIT",
+  "license": "MIT modified (no german)",
   "bugs": {
     "url": "https://github.com/bennof/tabularrasa/issues"
   },
