testing Ghost theme creation

--- a/jsdoc.conf
+++ b/jsdoc.conf
@@ -5,7 +5,7 @@
     },
     "opts": {
         "encoding": "utf8",
-        "destination": "./example/doc/",
+        "destination": "./doc/",
         "recurse": true,
         "package": "./package.json",
         "readme":"./README.md"
