--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "bulma": "^0.8.0",
     "copy-webpack-plugin": "^5.0.4",
     "css-loader": "^3.2.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "favicons-webpack-plugin": "^1.0.1",
     "file-loader": "^4.2.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
+    "node-sass": "^4.12.0",
     "sass": "^1.22.10",
     "sass-loader": "^7.2.0",
+    "style-loader": "^1.0.0",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.8.0"
